Update Targeted pool to have Osprey and Garfield, remove existing Garfield from Target pool